# ntcomp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli.rs  decode.rs  delta_encode.rs  encode.rs  lib.rs  main.rs
tests/: fasta_data.rs
