[package]
name = "ntcomp"
version = "0.1.0"
edition = "2024"
authors = [
    "Tommi Mäklin <tommi@maklin.fi>",
]
description = "Sequencing data compression using SBWT and k-bounded matching statistics."
readme = "README.md"
homepage = "https://github.com/tmaklin/ntcomp"
repository = "https://github.com/tmaklin/ntcomp"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ntcomp"
path = "src/main.rs"

[dependencies]
## core
bincode = "2"
clap = { version = "4", features = ["derive"]}
csv = "1"
kbo = "0.5"
log = "0.4"
needletail = "0.6"
sbwt = "0.3"
stderrlog = "0.6"

[profile.release]
debug = true
